books and consulting sections almost fully responsive, image spacing in book section not entirely correct yet

--- a/public/wp-content/themes/rick/style.css
+++ b/public/wp-content/themes/rick/style.css
@@ -416,7 +416,7 @@ header {
     margin-bottom: 5vh;
   }
   #what_i_do .cards {
-    height: 50vh;
+    height: 30vh;
     width: 100vw;
     display: flex;
     flex-direction: row;
@@ -772,8 +772,91 @@ header {
     width: 100vw;
     display: flex;
     flex-direction: column;
-    padding: 1rem;
+    padding: 2rem 1rem 2rem 1rem;
+  }
+  #books-wrapper .book-desktop {
     display: none;
+  }
+  #books-wrapper h3 {
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    color: hsl(45deg, 100%, 50%);
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+  #books-wrapper h2 {
+    color: white;
+    font-size: 1.2rem;
+    margin-bottom: 2rem;
+    text-align: center;
+    font-weight: bold;
+  }
+  #books-wrapper .display {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    left: 25px;
+    margin-bottom: 7vh;
+  }
+  #books-wrapper .display div h4 {
+    color: white;
+    font-weight: bold;
+    font-size: 1rem;
+    margin-bottom: 1rem;
+    text-align: left;
+    max-width: 80vw;
+    line-height: 1.5;
+  }
+  #books-wrapper .display div p {
+    color: white;
+    font-size: 0.8rem;
+    text-align: left;
+    max-width: 80vw;
+    margin-bottom: 3rem;
+    line-height: 1.7;
+  }
+  #books-wrapper .display div .button {
+    font-size: 0.9rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    background-color: hsl(45deg, 100%, 50%);
+    border: 1px solid hsl(45deg, 100%, 50%);
+    padding: 0.6rem 1.1rem;
+    border-radius: 10px;
+    margin-top: 35%;
+    color: hsl(204deg, 5%, 19%);
+    align-self: center;
+  }
+  #books-wrapper img {
+    position: relative;
+    right: 10px;
+    bottom: 50px;
+    margin: 10% 0% 0% -8%;
+  }
+  #books-wrapper p {
+    color: white;
+    font-size: 1rem;
+    text-align: center;
+  }
+  #books-wrapper .three-books-display {
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    align-self: center;
+  }
+  #books-wrapper .three-books-display img {
+    margin: 7vh 0 0 0;
+  }
+  #books-wrapper .button {
+    font-size: 0.9rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    background-color: hsl(45deg, 100%, 50%);
+    border: 1px solid hsl(45deg, 100%, 50%);
+    padding: 0.6rem 1.1rem;
+    border-radius: 10px;
+    color: hsl(204deg, 5%, 19%);
+    align-self: center;
   }
 }
 @media (min-width: 37.5rem) and (max-width: 120rem) {
@@ -784,6 +867,9 @@ header {
     display: flex;
     flex-direction: column;
     padding: 3rem;
+  }
+  #books-wrapper .book-phone {
+    display: none;
   }
   #books-wrapper h3 {
     text-transform: uppercase;
@@ -866,7 +952,73 @@ header {
 
 @media (min-width: 0rem) and (max-width: 37.4375rem) {
   #business-consulting {
-    display: none;
+    height: fit-content;
+    padding: 10% 10% 2% 10%;
+    width: 100vw;
+    margin-bottom: 10vh;
+  }
+  #business-consulting .button {
+    font-size: 0.9rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    background-color: hsl(45deg, 100%, 50%);
+    border: 1px solid hsl(45deg, 100%, 50%);
+    padding: 0.6rem 1.1rem;
+    border-radius: 10px;
+    margin-top: 35%;
+    color: hsl(204deg, 5%, 19%);
+  }
+  #business-consulting .succeed {
+    display: flex;
+    flex-direction: column-reverse;
+    row-gap: 3vh;
+    margin-bottom: 10vh;
+  }
+  #business-consulting .succeed div h2 {
+    font-size: 1.2rem;
+    max-width: 80vw;
+    color: white;
+    margin-bottom: 2rem;
+  }
+  #business-consulting .succeed div p {
+    line-height: 1.5;
+    margin-bottom: 3rem;
+    color: white;
+    max-width: 80vw;
+    font-size: 0.8rem;
+  }
+  #business-consulting .succeed img {
+    align-self: center;
+    width: 90%;
+    height: auto;
+    position: relative;
+    margin: 0;
+  }
+  #business-consulting .learning-together {
+    display: flex;
+    flex-direction: column;
+    row-gap: 3vw;
+    justify-content: right;
+  }
+  #business-consulting .learning-together div h2 {
+    font-size: 1.2rem;
+    max-width: 80vw;
+    color: white;
+    margin-bottom: 2rem;
+  }
+  #business-consulting .learning-together div p {
+    line-height: 1.5;
+    margin-bottom: 3rem;
+    color: white;
+    max-width: 80vw;
+    font-size: 0.8rem;
+  }
+  #business-consulting .learning-together img {
+    align-self: center;
+    width: 90%;
+    height: auto;
+    position: relative;
+    margin: 0;
   }
 }
 @media (min-width: 37.5rem) and (max-width: 120rem) {
