--- a/src/sass/layout/books.scss
+++ b/src/sass/layout/books.scss
@@ -9,8 +9,105 @@
         width: 100vw;
         display: flex;
         flex-direction: column;
-        padding: 1rem;
-        display: none;
+        padding: 2rem 1rem 2rem 1rem;
+
+        .book-desktop {
+            display: none;
+        }
+
+        h3 {
+            text-transform: uppercase;
+            font-size: 0.8rem;
+            color: $primary;
+            margin-bottom: 1rem;
+            text-align: center;
+        }
+
+        h2 {
+            color: white;
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        .display {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            left: 25px;
+            margin-bottom: 7vh;
+
+            div {
+                h4 {
+                    color: white;
+                    font-weight: bold;
+                    font-size: 1rem;
+                    margin-bottom: 1rem;
+                    text-align: left;
+                    max-width: 80vw;
+                    line-height: 1.5;
+                }
+        
+                p {
+                    color: white;
+                    font-size: 0.8rem;
+                    text-align: left;
+                    max-width: 80vw;
+                    margin-bottom: 3rem;
+                    line-height: 1.7;
+                }
+        
+                .button {
+                    font-size: 0.9rem;
+                    font-weight: bold;
+                    text-transform: uppercase;
+                    background-color: $primary;
+                    border: 1px solid $primary;
+                    padding:  0.6rem 1.1rem;
+                    border-radius: 10px;
+                    margin-top: 35%;
+                    color: $bggray;
+                    align-self: center;
+                }
+            }
+        }
+
+        img {
+            position: relative;
+            right: 10px;
+            bottom: 50px;
+            margin: 10% 0% 0% -8%;
+        }
+        p {
+            color: white;
+            font-size: 1rem; 
+            text-align: center;
+            
+        }
+    
+        .three-books-display {
+            display: flex;
+            flex-direction: row;
+            width: fit-content;
+            align-self: center;
+
+            img {
+                margin: 7vh 0 0 0;
+            }
+        }
+    
+        .button {
+            font-size: 0.9rem;
+            font-weight: bold;
+            text-transform: uppercase;
+            background-color: $primary;
+            border: 1px solid $primary;
+            padding:  0.6rem 1.1rem;
+            border-radius: 10px;
+            color: $bggray;
+            align-self: center;
+        }
     }
 }
 
@@ -22,6 +119,10 @@
         display: flex;
         flex-direction: column;
         padding: 3rem;
+
+        .book-phone {
+            display: none;
+        }
 
         h3 {
             text-transform: uppercase;
