--- a/src/sass/layout/cards.scss
+++ b/src/sass/layout/cards.scss
@@ -16,7 +16,7 @@
         }
 
         .cards {
-            height: 50vh;
+            height: 30vh;
             width: 100vw;
             display: flex;
             flex-direction: row;
